# cadbury

./: README.md  pyproject.toml
cadburybot/: environments.py  main.py
cadburybot/commands/: environments.py  requests.py
cadburybot/utils/: echo.py  file_factory.py
tests/: test_cadburybot.py
~/cadburybot/: environments.json
