[tool.poetry]
name = "cadburybot"
version = "0.1.0"
description = ""
authors = ["Sharran <sharran.murali@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cadbury = "cadburybot.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
